data/derived/comb/progs/unify/prog2852.ml.out
Characters 61-83:
  n mod 10 :: [digitsOfInt (n / 10)] :: [];;
              ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
